--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,6 +25,19 @@
     }
 }
 
+@layer base {
+    input[type='time'],
+    input[type='datetime-local'] {
+        display: block;
+        width: 100%;
+        max-width: 100%;
+        min-width: 0;
+        box-sizing: border-box;
+        -webkit-appearance: none;
+        appearance: none;
+    }
+}
+
 @layer utilities {
     .animate-fade-up {
         animation: app-fade-up 0.5s ease-out both;
